bebytes/tests/compile_time/size_expressions/nonexistent_field.stderr
error[E0425]: cannot find value `nonexistent` in this scope
 --> tests/compile_time/size_expressions/nonexistent_field.rs:8:10
  |
8 | #[derive(BeBytes, Debug, PartialEq)]
  |          ^^^^^^^ not found in this scope
  |
  = note: this error originates in the derive macro `BeBytes` (in Nightly builds, run with -Z macro-backtrace for more info)
